complete the projec

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,9 +13,9 @@
     <title>Candeleaf</title>
 </head>
 
-<body>
+<body class="font-poppins">
 
-    <!--TODO: SECTION START -->
+    <!--TODO: HEADER SECTION START -->
     <header class="flex shadow-md py-4 px-4 sm:px-10 bg-white min-h-[70px] tracking-wide relative z-50">
         <div class="container max-w-[1135px] mx-auto ">
             <div class="flex flex-wrap items-center justify-between gap-5 w-full ">
@@ -79,10 +79,46 @@
                 </div>
             </div>
     </header>
-    <!--TODO: SECTION END -->
+    <!--TODO: HEADER SECTION END -->
 
 
     <!--TODO:MAIN SECTION START -->
+
+    <!--? HERO-SECTION SECTION START -->
+  <section class="hero-section relative">
+    <div class="hero-content relative">
+        <!-- Hero Image -->
+        <img src="./img/hero-bg.png" alt="hero-background" class="w-full h-auto object-cover">
+
+        <!-- Content -->
+        <div class="main-content absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full">
+            <div class="container max-w-[1135px] mx-auto px-4">
+                <div
+                    class="middle-content text-center w-full md:w-[680px] mx-auto bg-[#ffffffa9] px-6 sm:px-10 md:px-[100px] pt-6 md:pt-[70px] pb-8 md:pb-[80px] rounded-md relative">
+                    
+                    <!-- Title Image -->
+                    <!-- <img src="./img/hero-title.png" 
+                         class="absolute top-[10px] left-1/2 -translate-x-1/2 md:top-0 md:left-[750px] lg:left-[905px] pt-[30px]" 
+                         alt=""> -->
+
+                    <!-- Text -->
+                    <h1 class="text-2xl sm:text-3xl md:text-[40px] text-[#1D252C]">The Nature Candle</h1>
+                    <p class="text-sm sm:text-base md:text-[16px] pt-2 pb-[30px]">
+                        All handmade with natural soy wax, Candleaf is a companion for all your pleasure moments
+                    </p>
+                    <a href="#"
+                        class="bg-[#56b280] text-base md:text-lg font-medium text-white py-2 px-6 md:px-8 rounded-md border border-[#56b280] hover:bg-transparent hover:text-[#56b280] duration-300">
+                        Discover Our Collection
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+    <!--? HERO-SECTION SECTION START -->
+
 
     <!--? PRODUCT SECTION START -->
     <section class="product-section pt-[90px] pb-[125px]">
@@ -164,7 +200,7 @@
                         <p class="text-end text-[#56B280] font-medium text-[20px]">9.99$</p>
                     </div>
                 </div>
-                
+
                 <div class="produc-blocks shadow-lg hover:shadow-2xl duration-200 cursor-pointer w-[255px]">
                     <div class="product-img  bg-[#f7f8fa] rounded-lg">
                         <img src="./img/products-img/product-8.png" alt="product image">
@@ -179,12 +215,152 @@
     </section>
     <!--? PRODUCT SECTION START -->
 
+    <!--? CLEAN FRAGRNT SECTION START -->
+    <section class="clean-fragrant bg-[#f7f8fa] py-16 md:py-24 lg:py-32">
+        <div class="container max-w-[1135px] mx-auto px-4">
+            <div
+                class="clean-content flex flex-col lg:flex-row items-center lg:items-start justify-between gap-8 lg:gap-0">
+
+                <!-- Left -->
+                <div class="clean-left w-full lg:w-1/2 text-center lg:text-left mb-10 lg:mb-0">
+                    <h2 class="text-2xl sm:text-3xl md:text-4xl lg:text-[40px] leading-tight font-medium">
+                        Clean and <br class="hidden sm:block"> fragrant soy wax
+                    </h2>
+                    <p class="text-base sm:text-lg text-[#56b280] pt-3 pb-6 md:pt-4 md:pb-10">
+                        Made for your home and for your wellness
+                    </p>
+
+                    <div class="clean-list space-y-4 mb-8 md:mb-16">
+                        <div class="list-content flex items-start gap-[10px]">
+                            <div class="list-icon">
+                                <img src="./img/check.svg" alt="">
+                            </div>
+                            <div class="item-list">
+                                <p><span class="font-medium">Eco-sustainable: </span>All recyclable materials, 0% CO2
+                                    emissions</p>
+                            </div>
+                        </div>
+
+                        <div class="list-content flex items-start gap-[10px]">
+                            <div class="list-icon">
+                                <img src="./img/check.svg" alt="">
+                            </div>
+                            <div class="item-list">
+                                <p><span class="font-medium">Hyphoallergenic: </span> 100% natural, human friendly
+                                    ingredients </p>
+                            </div>
+                        </div>
+
+                        <div class="list-content flex items-start gap-[10px]">
+                            <div class="list-icon">
+                                <img src="./img/check.svg" alt="">
+                            </div>
+                            <div class="item-list">
+                                <p><span class="font-medium">Handmade: </span> All candles are craftly made with love.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="list-content flex items-start gap-[10px]">
+                            <div class="list-icon">
+                                <img src="./img/check.svg" alt="">
+                            </div>
+                            <div class="item-list">
+                                <p><span class="font-medium">Long burning: </span>No more waste. Created for last long.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="clean-btn">
+                        <a href="#"
+                            class="bg-[#56b280] text-lg md:text-xl font-medium text-white py-2 px-8 rounded-md border border-[#56b280] hover:bg-transparent hover:text-[#56b280] duration-300">
+                            Learn More
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Right -->
+                <div class="clean-right w-full lg:w-1/2 flex justify-center lg:justify-end">
+                    <div class="right-img bg-white rounded-xl shadow-md p-4">
+                        <img src="./img/clean-bg.png" alt="" class="max-w-full h-auto">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--? CLEAN FRAGRNT SECTION START -->
+
+    <!--? TESTIMONIAL SECTION START -->
+    <section class="testtimonial pt-[90px] pb-[60px] bg-[#eef7f2]">
+        <div class="container max-w-[1135px] mx-auto">
+            <div class="product-top text-center">
+                <h1 class="text-[#0B254B] font-medium text-[40px] ">Testimonials</h1>
+                <p class="text-[18px] text-[#5E6E89] font-medium pt-[10px] pb-[50px]">Some quotes from our happy
+                    customers</p>
+            </div>
+
+            <div class="testi-content flex gap-[30px] flex-wrap items-center justify-center">
+
+                <div class="test-body w-[350px] px-[30px] py-[30px] bg-white text-center rounded-md shadow-md">
+                    <div class="img flex items-center justify-center">
+                        <img src="./img/testi-img/testi-1.png" alt="testimonial-image">
+                    </div>
+                    <div class="rating flex items-center justify-center mb-[20px]">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/half-star5.svg" alt="">
+                    </div>
+                    <h2 class="text-[22px] font-medium leading-[28px]">“I love it! No more air fresheners”</h2>
+
+                    <p class="text-[18px] text-[#5E6E89] font-medium pt-[6px]">Luisa</p>
+                </div>
+
+                <div class="test-body w-[350px] px-[30px] py-[30px] bg-white text-center rounded-md shadow-md">
+                    <div class="img flex items-center justify-center">
+                        <img src="./img/testi-img/testi-2.png" alt="testimonial-image">
+                    </div>
+                    <div class="rating flex items-center justify-center mb-[20px]">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/half-star5.svg" alt="">
+                    </div>
+                    <h2 class="text-[22px] font-medium leading-[28px]">“Raccomended for everyone”</h2>
+
+                    <p class="text-[18px] text-[#5E6E89] font-medium pt-[6px]">Edoardo</p>
+                </div>
+
+                <div class="test-body w-[350px] px-[30px] py-[30px] bg-white text-center rounded-md shadow-md">
+                    <div class="img flex items-center justify-center">
+                        <img src="./img/testi-img/testi-3.png" alt="testimonial-image">
+                    </div>
+                    <div class="rating flex items-center justify-center mb-[20px]">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/fill-star.svg" alt="">
+                        <img src="./img/half-star5.svg" alt="">
+                    </div>
+                    <h2 class="text-[22px] font-medium leading-[28px]">“Looks very natural, the smell is awesome”</h2>
+
+                    <p class="text-[18px] text-[#5E6E89] font-medium pt-[6px]">Mart</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--? TESTIMONIAL SECTION START -->
+
     <!--? POPULAR SECTION START -->
     <section class="product-section pt-[90px] pb-[125px]">
         <div class="container max-w-[1135px] mx-auto">
             <div class="product-top text-center">
                 <h1 class="text-[#0B254B] font-medium text-[40px]">Popular</h1>
-                <p class="text-[18px] text-[#5E6E89] font-medium pt-[10px] pb-[50px]">Our top selling product that you may like</p>
+                <p class="text-[18px] text-[#5E6E89] font-medium pt-[10px] pb-[50px]">Our top selling product that you
+                    may like</p>
             </div>
 
             <div class="product-content flex flex-wrap gap-[30px] items-center justify-center">
@@ -232,12 +408,91 @@
         </div>
     </section>
     <!--? POPULAR SECTION START -->
-
-
-    <!--? MAIN SECTION START -->
-    <!--? MAIN SECTION START -->
-
     <!--TODO:MAIN SECTION END -->
+
+
+    <!--! FOOTER SECTION START -->
+    <footer class="footer-section bg-black pt-[60px] pb-[115px]">
+        <div class="container max-w-[1135px] mx-auto px-4 border-1 border-t-white">
+            <div
+                class="footer-content pt-5 flex flex-col lg:flex-row justify-between items-center lg:items-start gap-10">
+
+                <!-- Left -->
+                <div class="footer-left text-center lg:text-left">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="./img/footer-logo.png" alt="footer logo">
+                        </a>
+                    </div>
+                    <p class="text-white leading-[22px] pt-[10px]">
+                        Your natural candle made for <br> your home and for your wellness.
+                    </p>
+                </div>
+
+                <!-- Right -->
+                <div class="footer-right w-full lg:w-auto">
+                    <div
+                        class="footer-content flex flex-col sm:flex-row gap-8 sm:gap-[40px] justify-center text-center sm:text-left">
+
+                        <!-- Item 1 -->
+                        <div class="footer-item">
+                            <h4 class="text-[#56b280] text-[18px] font-medium mb-[20px]">Discovery</h4>
+                            <div class="menus">
+                                <nav>
+                                    <ul>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">New Season</a></li>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">Most Searched</a></li>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">Most Selled</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+
+                        <!-- Item 2 -->
+                        <div class="footer-item">
+                            <h4 class="text-[#56b280] text-[18px] font-medium mb-[20px]">About</h4>
+                            <div class="menus">
+                                <nav>
+                                    <ul>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">Help</a></li>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">Shipping</a></li>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">Affiliate</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+
+                        <!-- Item 3 -->
+                        <div class="footer-item">
+                            <h4 class="text-[#56b280] text-[18px] font-medium mb-[20px]">Info</h4>
+                            <div class="menus">
+                                <nav>
+                                    <ul>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">Contact us</a></li>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">Privacy Polocies</a></li>
+                                        <li class="pb-[10px]"><a href="#"
+                                                class="text-[#E1E1E1] text-[16px] font-medium">Terms & Condition</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!--! FOOTER SECTION START -->
 </body>
 
 </html>
